name and font style

--- a/html/Structure.html
+++ b/html/Structure.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="Js/Functionality.js">
 </head>
 <body>
-    <h1>PORTFOLIO WEBSITE</h1>
+ 
+    <h1>
+        Welcome To<br>
+        PORTFOLIO Website</h1>
+    <style>
+        h1{
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+    </style>        
 </body>
 </html>
