--- a/html/Structure.html
+++ b/html/Structure.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="Js/Functionality.js">
 </head>
 <body>
+    <div class="circle"></div>
+    <div class="big-text">
+        Hello
+    </div>
+    
  
     <h1>
         Welcome To<br>
-        PORTFOLIO Website</h1>
+        PORTFOLIO Maker</h1>
     <style>
         h1{
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
