--- a/html/Structure.html
+++ b/html/Structure.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="Js/Functionality.js">
 </head>
 <body>
-    <div class="circle"></div>
+    <div class="circle">
+        <img src="C:\Users\yashk\AppData\Local\Temp\Tempc9218608-aa40-43a3-bcd3-5cb31713efa2_isolated-young-handsome-man-different-poses-white-background-illustration.zip\836.jpg" alt="Avatar">
+    </div>
     <div class="big-text">
         Hello
     </div>
