--- a/html/Structure.html
+++ b/html/Structure.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
-    <link rel="stylesheet" href="Css/Style.css">
+    <link rel="stylesheet" type="text/css" href="Css/style.css">
+ 
     <link rel="stylesheet" href="Js/Functionality.js">
 </head>
 <body>
