headthoda sa updated

--- a/html/Structure.html
+++ b/html/Structure.html
@@ -14,7 +14,7 @@
     <div class="toolbar">
         <div class="toolbar-content">
             <!-- Add a logo or title to the toolbar -->
-            <div class="toolbar-title">My Website</div>
+            <div class="toolbar-title">My Websitehalo</div>
             <!-- Add navigation links or other toolbar content here if needed -->
             <nav id="toolbar">
                 <ul>
