--- a/html/Structure.html
+++ b/html/Structure.html
@@ -16,10 +16,8 @@
             <div class="toolbar-title">My Websitehalo</div>
             <!-- Add navigation links or other toolbar content here if needed -->
             <nav id="toolbar">
-                <ul>
-                    <li class="home"><a id="home"href="#">Home</a></li>
-                    <li class="about"><a id="about" href="#">About Us</a></li>
-                </ul>
+                <button class="home">Home</button>
+                <button class="about">About Us</button>
             </nav>
         </div>
       
