some  chnges in format

--- a/html/page1.html
+++ b/html/page1.html
@@ -19,46 +19,44 @@
 
 
     <form action="submit_form.php" method="POST">
-        <div class="form-container field-gap">
+        <formfield class="form-container field-gap">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required placeholder="Yash"><br>
-        </div>
+            <input type="text" id="name" name="name" required placeholder="Yash">
+        </formfield>
 
-        <label for="surname">Surname:</label>
-        <input type="text" id="surname" name="surname" required placeholder="Deswal"><br>
+        <formfield class="form-container field-gap">
+            <label for="surname">Surname:</label>
+            <input type="text" id="surname" name="surname" required placeholder="Deswal">
+        </formfield>
 
-        <div class="inline-fields field-gap">
+        <formfield class="form-container field-gap">
             <label for="city">City:</label>
-            <input type="text" id="city" name="city" required placeholder="Delhi"><br>
-        </div>
-        <div class="inline-fields">
-        <label for="country">Country:</label>
-        <input type="text" id="country" name="country" required placeholder="India"><br>
-        </div>
+            <input type="text" id="city" name="city" required placeholder="Delhi">
+        </formfield>
 
-        <label for="pincode">Pin Code:</label>
-        <input type="text" id="pincode" name="pincode" required placeholder="110001"><br>
-        
-        <div class="form-container field-gap">
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone" required placeholder="91-1234567890"><br>
-    </div>
+        <formfield class="form-container field-gap">
+            <label for="country">Country:</label>
+            <input type="text" id="country" name="country" required placeholder="India">
+        </formfield>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required placeholder="yashdeswal@gmail.com"><br>
+        <formfield class="form-container field-gap">
+            <label for="pincode">Pin Code:</label>
+            <input type="text" id="pincode" name="pincode" required placeholder="110001">
+        </formfield>
+
+        <formfield class="form-container field-gap">
+            <label for="phone">Phone:</label>
+            <input type="tel" id="phone" name="phone" required placeholder="91-1234567890">
+        </formfield>
+
+        <formfield class="form-container field-gap">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required placeholder="yashdeswal@gmail.com">
+        </formfield>
 
 
         <input type="submit" value="Submit">
     </form>
-</body>
-
-</html>
-
-
-
-
-
-
 </body>
 
 </html>
