Added Login Page

--- a/html/Structure.html
+++ b/html/Structure.html
@@ -17,6 +17,7 @@
             <!-- Add navigation links or other toolbar content here if needed -->
             <nav id="toolbar">
                 <button class="home">Home</button>
+                <button class="login" id="loginButton">Login</button>
                 <button class="about">About Us</button>
             </nav>
         </div>
