--- a/html/login.html
+++ b/html/login.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="login-box">
-        <label for="">Username: <input type="text" required></label>
-        <label for="">Email: <input type="email" required></label>
-        <label for="">Password: <input type="password" required></label>
+        <label for="">Username: <input type="text" placeholder="xyz" required></label>
+        <label for="">Email: <input type="email" placeholder="example@xyz.com" required></label>
+        <label for="">Password: <input type="password" placeholder="Password" required></label>
         <button id="login-button">Login</button>
     </div>
 </body>
