--- a/html/Structure.html
+++ b/html/Structure.html
@@ -7,7 +7,7 @@
     <title>Portfolio Website</title>
     <link rel="stylesheet" type="text/css" href="Css/style.css">
 
-    <link rel="stylesheet" href="Js/Functionality.js">
+    <script src="Functionality.js"></script>
 </head>
 <body>
     <div class="toolbar">
