--- a/html/login.html
+++ b/html/login.html
@@ -8,12 +8,14 @@
     <title>Login Page</title>
 </head>
 
-<body>
+<body background="Login back.png">
+    <div class="image"><img src="user.png" alt="password-logo" id="logo" height="60"></div>
     <div class="login-box">
-        <label for="">Username: <input type="text" placeholder="xyz" required></label>
-        <label for="">Email: <input type="email" placeholder="example@xyz.com" required></label>
-        <label for="">Password: <input type="password" placeholder="Password" required></label>
-        <button id="login-button">Login</button>
+        <div class="input-box">
+            <input type="email" placeholder="Email ID"  class="input" required>
+            <input type="password" placeholder="Password" class="input" required>
+            <button id="login-button">Login</button>
+        </div>
     </div>
 </body>
 
