--- a/html/login.html
+++ b/html/login.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/login.css">
     <title>Login Page</title>
 </head>
-
 <body background="Login back.png">
-    <div class="image"><img src="user.png" alt="password-logo" id="logo" height="60"></div>
-    <div class="login-box">
-        <div class="input-box">
-            <input type="email" placeholder="Email ID"  class="input" required>
-            <input type="password" placeholder="Password" class="input" required>
-            <button id="login-button">Login</button>
-        </div>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form class="log">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            </div>
+            <button type="submit" class="btn">Login</button>
+        </form>
     </div>
 </body>
-
 </html>
