--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Css/login.css">
     <title>Login Page</title>
 </head>
-<body background="Login back.png">
+<body>
     <div class="login-container">
         <h2>Login</h2>
         <form class="log">
