--- a/html/signup.html
+++ b/html/signup.html
@@ -3,9 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign Up</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-image: url('https://img.freepik.com/free-vector/abstract-technological-background_23-2148897676.jpg?w=1060&t=st=1695313673~exp=1695314273~hmac=1ab4d69badbe87f9839ca084bfdcc2d5b6d56d5f0a63f3e6741716214c2f6232 ');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .signup-form {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 10px 5px rgb(0, 0, 0) inset;
+            background-image: url('https://img.freepik.com/free-vector/network-mesh-wire-digital-technology-background_1017-27428.jpg?t=st=1695315570~exp=1695316170~hmac=54820f2fb611f6db0952e19138ef4ff8fb1651eeb0f32374025d913ce50713b1');
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        .form-group input[type="text"],
+        .form-group input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .form-group input[type="checkbox"] {
+            margin-right: 5px;
+        }
+
+        .signup-button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .form-group .checkbox-label {
+            display: flex;
+            align-items: center;
+        }
+        .form-group input[type="checkbox"] {
+            margin-right: 50px;
+            margin-left: 0px;
+            margin-top: 0px;
+            margin-bottom: 0px;
+        }
+
+        .form-group input[type="terms"]{
+            margin-bottom: 50px;
+        }
+
+        .a{
+            display:flex;
+            align-items: center;
+        }
+        .signup-button.clicked {
+            background-color: orange;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="signup-form">
+        <h2>Sign Up</h2>
+        <form action="#" method="post">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" required placeholder="Enter Your Email Id" >
+            </div>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required placeholder="Enter Your Name">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" pattern="^(?=.*[A-Z])(?=.*\d).{8,}$" required placeholder="Minimum of 8 Characters"> 
+            </div>
+            <div class="form-group">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" id="confirm-password" name="confirm-password" required placeholder="Confirm Your Password">
+            </div>
+            <div class="form-group">
+                <div class="a">
+                  <input type="checkbox" id="terms" name="terms" required>
+                  <label for="terms">I agree to the terms and conditions</label>
+                </div>
+            </div>
+            <button type="submit" class="signup-button">Sign Up</button>
+        </form>
+    </div>
+    <script>
+        const signupButton = document.getElementById('signup-button');
+
+        signupButton.addEventListener('click', () => {
+            signupButton.classList.add('clicked');
+        });
+    </script>
 </body>
 </html>
+
