--- a/html/signup.html
+++ b/html/signup.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="signup-form">
-        <h2>Sign Up</h2>
         <form action="#" method="post">
+            <div class="signicon"></div>
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="text" id="email" name="email" required placeholder="Email Id">
