--- a/html/Feedback.html
+++ b/html/Feedback.html
@@ -9,89 +9,94 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="title">Portfolio Maker Feedback Form</h1>
-        <p id="description">Thank you for taking the time to help us improve the website</p>
-    </header>
-    <form action="#" id="survey-form">
-        <div>
-            <label for="name" id="name-label">Name:</label>
-            <input type="text" id="name" placeholder="Enter your name" required>
-        </div>
-        <div>
-            <label for="email" id="email-label">Email:</label>
-            <input type="email" id="email" placeholder="Enter your email" required>
-        </div>
+    <figure id="container">
+        <header>
+            <h1 id="title">Portfolio Maker Feedback Form</h1>
+            <p id="description">Thank you for taking the time to help us improve the website</p>
+        </header>
+        <main>
+            <form action="#" id="survey-form">
+                <div>
+                    <label for="name" id="name-label">Name:</label>
+                    <input type="text" id="name" placeholder="Enter your name" required>
+                </div>
+                <div>
+                    <label for="email" id="email-label">Email:</label>
+                    <input type="email" id="email" placeholder="Enter your email" required>
+                </div>
 
-        <div id="recommend_id">
-            <label>Would you recommend Portfolio Maker to a colleague?</label>
-            <input type="radio" name="recommend" id="recommend_yes" value="yes" class="recommend">
-            <label for="recommend_yes">Yes</label>
-            <input type="radio" name="recommend" id="recommend_maybe" value="maybe" class="recommend">
-            <label for="recommend_maybe">Maybe</label>
-            <input type="radio" name="recommend" id="recommend_no" value="no" class="recommend">
-            <label for="recommend_no">No</label>
-        </div>
-        <div>
-            <label for="dropdown">What is your favorite thing in Portfolio Maker?</label>
-            <select id="dropdown" name="favorite_thing">
-                <option value="select">Select</option>
-                <option value="Templates">Templates</option>
-                <option value="UI">UI</option>
-                <option value="other">Other</option>
-            </select>
-        </div>
-        <div>
-            <label>What would you like to see improved? (Check all that apply)</label>
-            <input type="checkbox" name="improvement" id="improvement_templates" value="templates">
-            <label for="improvement_templates">Templates</label>
-            <input type="checkbox" name="improvement" id="improvement_UI" value="UI">
-            <label for="improvement_graphics">UI</label>
-        </div>
-        <table>
+                <div id="recommend_id">
+                    <label>Would you recommend Portfolio Maker to a colleague?</label>
+                    <input type="radio" name="recommend" id="recommend_yes" value="yes" class="recommend">
+                    <label for="recommend_yes">Yes</label>
+                    <input type="radio" name="recommend" id="recommend_maybe" value="maybe" class="recommend">
+                    <label for="recommend_maybe">Maybe</label>
+                    <input type="radio" name="recommend" id="recommend_no" value="no" class="recommend">
+                    <label for="recommend_no">No</label>
+                </div>
+                <div>
+                    <label for="dropdown">What is your favorite thing in Portfolio Maker?</label>
+                    <select id="dropdown" name="favorite_thing">
+                        <option value="select">Select</option>
+                        <option value="Templates">Templates</option>
+                        <option value="UI">UI</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div>
+                    <label>What would you like to see improved? (Check all that apply)</label>
+                    <input type="checkbox" name="improvement" id="improvement_templates" value="templates">
+                    <label for="improvement_templates">Templates</label>
+                    <input type="checkbox" name="improvement" id="improvement_UI" value="UI">
+                    <label for="improvement_graphics">UI</label>
+                </div>
+                <table>
 
-            <tr>
-                <th></th>
-                <th>Very Bad</th>
-                <th>Bad</th>
-                <th>Good</th>
-                <th>Very Good</th>
-                <th>Outstanding</th>
-            </tr>
-            <tr>
-                <td>Templates</td>
-                <td><input type="radio" name="tep"></td>
-                <td><input type="radio" name="tep"></td>
-                <td><input type="radio" name="tep"></td>
-                <td><input type="radio" name="tep"></td>
-                <td><input type="radio" name="tep"></td>
-            </tr>
-            <tr>
-                <td>UI</td>
-                <td><input type="radio" name="UI"></td>
-                <td><input type="radio" name="UI"></td>
-                <td><input type="radio" name="UI"></td>
-                <td><input type="radio" name="UI"></td>
-                <td><input type="radio" name="UI"></td>
-            </tr>
-            <tr>
-                <td>UX</td>
-                <td><input type="radio" name="UX"></td>
-                <td><input type="radio" name="UX"></td>
-                <td><input type="radio" name="UX"></td>
-                <td><input type="radio" name="UX"></td>
-                <td><input type="radio" name="UX"></td>
-            </tr>
-        </table>
-        <div>
-            <label for="comments">Any comments or suggestions?</label>
-            <textarea id="comments" name="comments" cols="30" rows="5" placeholder="Enter your suggestions here">
+                    <tr>
+                        <th></th>
+                        <th>Very Bad</th>
+                        <th>Bad</th>
+                        <th>Good</th>
+                        <th>Very Good</th>
+                        <th>Outstanding</th>
+                    </tr>
+                    <tr>
+                        <td>Templates</td>
+                        <td><input type="radio" name="tep"></td>
+                        <td><input type="radio" name="tep"></td>
+                        <td><input type="radio" name="tep"></td>
+                        <td><input type="radio" name="tep"></td>
+                        <td><input type="radio" name="tep"></td>
+                    </tr>
+                    <tr>
+                        <td>UI</td>
+                        <td><input type="radio" name="UI"></td>
+                        <td><input type="radio" name="UI"></td>
+                        <td><input type="radio" name="UI"></td>
+                        <td><input type="radio" name="UI"></td>
+                        <td><input type="radio" name="UI"></td>
+                    </tr>
+                    <tr>
+                        <td>UX</td>
+                        <td><input type="radio" name="UX"></td>
+                        <td><input type="radio" name="UX"></td>
+                        <td><input type="radio" name="UX"></td>
+                        <td><input type="radio" name="UX"></td>
+                        <td><input type="radio" name="UX"></td>
+                    </tr>
+                </table>
+                <div>
+                    <label for="comments">Any comments or suggestions?</label>
+                    <textarea id="comments" name="comments" cols="30" rows="5"
+                        placeholder="Enter your suggestions here">
             </textarea>
-        </div>
-        <div>
-            <button type="submit">Submit</button>
-        </div>
-    </form>
+                </div>
+                <div>
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </main>
+    </figure>
 </body>
 
 </html>
