some small changes to main page

--- a/html/Structure.html
+++ b/html/Structure.html
@@ -16,9 +16,12 @@
             <div class="toolbar-title">My Websitehalo</div>
             <!-- Add navigation links or other toolbar content here if needed -->
             <nav id="toolbar">
-                <button class="home">Home</button>
-                <button class="login" id="loginButton">Login</button>
-                <button class="about">About Us</button>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                
+                </ul>
             </nav>
         </div>
       
