--- a/html/page1.html
+++ b/html/page1.html
@@ -17,46 +17,50 @@
 
     <h3>Include your full name and at least one way for employers to reach you.</h3>
 
-
-    <form action="submit_form.php" method="POST">
-        <formfield class="form-container field-gap">
+    <figure>
+    <form class="form" action="submit_form.php" method="POST">
+        <ul>
+        <li class="form-container field-gap">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required placeholder="Yash">
-        </formfield>
+        </li>
 
-        <formfield class="form-container field-gap">
+        <li class="form-container field-gap">
             <label for="surname">Surname:</label>
             <input type="text" id="surname" name="surname" required placeholder="Deswal">
-        </formfield>
+        </li>
 
-        <formfield class="form-container field-gap">
+        <li class="form-container field-gap">
             <label for="city">City:</label>
             <input type="text" id="city" name="city" required placeholder="Delhi">
-        </formfield>
+        </li>
 
-        <formfield class="form-container field-gap">
+        <li class="form-container field-gap">
             <label for="country">Country:</label>
             <input type="text" id="country" name="country" required placeholder="India">
-        </formfield>
+        </li>
 
-        <formfield class="form-container field-gap">
+        <li class="form-container field-gap">
             <label for="pincode">Pin Code:</label>
             <input type="text" id="pincode" name="pincode" required placeholder="110001">
-        </formfield>
+        </li>
 
-        <formfield class="form-container field-gap">
+        <li class="form-container field-gap">
             <label for="phone">Phone:</label>
             <input type="tel" id="phone" name="phone" required placeholder="91-1234567890">
-        </formfield>
+        </li>
 
-        <formfield class="form-container field-gap">
+        <li class="form-container field-gap">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required placeholder="yashdeswal@gmail.com">
-        </formfield>
+        </li>
 
-
-        <input type="submit" value="Submit">
+        <li class="button">
+            <button type="submit">Submit</button>
+        </li>
+    </ul>
     </form>
+    </figure>
 </body>
 
 </html>
