updated css of page 1

--- a/html/Structure.html
+++ b/html/Structure.html
@@ -55,7 +55,7 @@
             <img id="temp1" src="https://cdn.discordapp.com/attachments/1147215011840794706/1147435798787018762/5192055.jpg"
             alt="Template 1">
         </a>
-        
+    </section>
 
 </body>
 </html>
