--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -20,9 +20,10 @@
             <div class="title">
                 <h2>Contact Us</h2>
                 <p>Need to talk to someone? Here's how:</p>
-                <h3>Call Us</h3>
+                
             </div>
             <div class="contact-card">
+                <h3>Call Us</h3>
                 <div class="contact-card-left">
                     <h4>
                         <span>
@@ -64,15 +65,17 @@
         <div class="contact2">
             <h3>Reach Us by Email</h3>
             <div class="Form-Group">
-                <label>FULL NAME</label>
+                <label>FULL NAME:</label>
                 <input type="text" name="" id="cus_name" placeholder="Dani Danie">
             </div>
+            <p></p>
             <div class="Form-Group">
-                <label>EMAIL</label>
+                <label>EMAIL:</label>
                 <input type="email" name="" id="cus_email" placeholder="sample@xyz.com">
             </div>
+            <p></p>
             <div class="Form-Group">
-                <label>SUBJECT</label>
+                <label>SUBJECT:</label>
                 <select name="" id="cus_subject">
                     <option value="">Customer services</option>
                     <option value="">Billing Questions</option>
@@ -81,10 +84,13 @@
                     <option value="">Suggest Improvement</option>
                 </select>
             </div>
-            <div class="Form-Group">
+            <p></p>
+            <div class="Form-Group help">
                 <label>HOW CAN WE HELP YOU?</label>
+                <p></p>
                 <textarea name="" id="" cols="30" rows="10" id="cus_textarea" placeholder="Type here..."></textarea>
             </div>
+            <p></p>
             <div class="Form-Group">
                 <button id="cus_submit">Submit</button>
             </div>
