updated Contact_Us page

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -11,8 +11,11 @@
 <body>
     <header>
         <h1>We're here for you 7 days a week</h1>
-        <p>Have concerns about your account? Questions about our products and services? Need technical support? You've
-            come to the right place! We're here to help you seven days a week.
+        <p>Have concerns about your account? <br>
+            Questions about our products and services? <br>
+            Need technical support? You've
+            come to the right place! <br> 
+            We're here to help you seven days a week.
         </p>
     </header>
     <section>
@@ -20,7 +23,7 @@
             <div class="title">
                 <h2>Contact Us</h2>
                 <p>Need to talk to someone? Here's how:</p>
-                
+
             </div>
             <div class="contact-card">
                 <h3>Call Us</h3>
@@ -51,13 +54,13 @@
                 </div>
             </div>
             <div class="container">
-                <h3>Locations</h3>
+                <h2>Locations</h2>
                 <div class="address-card">
                     <h3 class="Location">Lovely Professional University</h3>
                     <p>
-                        City View Plaza II, 48 Road 165 <br>
-                        Suite 6000, Guaynabo, PR 00968 <br>
-                        Puerto Rico
+                        Jalandhar - Delhi, <br>
+                        Grand Trunk Rd, Phagwara, <br>
+                        Punjab 144001
                     </p>
                 </div>
             </div>
