--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -30,9 +30,9 @@
                 <div class="contact-card-left">
                     <h4>
                         <span>
-                            <img src="Indian Flag.png" alt="Indian Flag" height="50px">
+                            <img src="Indian Flag.png" alt="Indian Flag" height="70px" width="100px">
                         </span>
-                        India
+                        <span style="font-size:32px;">India</span>
                         <p>+91 81688-XXXXX</p>
                     </h4>
                 </div>
@@ -69,7 +69,7 @@
             <h3>Reach Us by Email</h3>
             <div class="Form-Group">
                 <label>FULL NAME:</label>
-                <input type="text" name="" id="cus_name" placeholder="Dani Danie">
+                <input type="text" name="" id="cus_name" placeholder="Daniel">
             </div>
             <p></p>
             <div class="Form-Group">
