index page redesigned part2

--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,25 @@
     </header>
 
     <main>
+        <div class="op">
+            <h1>The Perfect <span>Touch</span></h1>
+            <h2>Custom portfolio and resume tailored to your style and space.</h2>
+        </div>
+        <div class="choose">
+            <h3 id="cap">HOW IT WORKS</h3>
+            <ul>
+                <li>-1-
+                    <span>Choose any one of the templates of your choice.</span>
+                </li>
+                <li>-2-
+                    <span>Fill in the details asked and make sure to keep them correct as much as possible.</span>
+                </li>
+                <li>-3-
+                    <span>Your portfolio will be shown. You can download it. It's that simple!</span>
+                </li>
+            </ul>
+        </div>
+        <div class="tt">
         <h3>
             Templates
         </h3>
@@ -45,6 +64,7 @@
                     alt="Template 1">
             </a>
         </section>
+        </div>
     </main>
 
 
