--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,20 @@
         </div>
     </header>
 
+        <div class="text">
+
+            <a id="text2">
+
+                <b>Showcase your<br> work with an<br> online portfolio</b>
+            </a>
+
+            <a id="text1"><bR><br>From intuitive design features to built-in marketing tools,<br> discover the complete solution for building<br> a portfolio that stands out online.</a>
+            <button id="rounded-button">Get Started</button>
+
+        </div>   
+
+        
+
     <main>
         <div class="op">
             <h1>The Perfect <span>Touch</span></h1>
