--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
                 <b>Showcase your<br> work with an<br> online portfolio</b>
             </a>
 
-            <a id="text1"><bR><br>From intuitive design features to built-in marketing tools,<br> discover the complete solution for building<br> a portfolio that stands out online.</a>
+            <p id="text1"><bR><br>From intuitive design features to built-in marketing tools,<br> discover the complete solution for building<br> a portfolio that stands out online.</p>
             <button id="rounded-button">Get Started</button>
 
         </div>   
