Updated index page with background

--- a/html/index.html
+++ b/html/index.html
@@ -19,8 +19,8 @@
             <nav class="nav">
                 <ul class="nav">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About_Us</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="Feedback.html">Feedback</a></li>
+                    <li><a href="contact_us.html">Contacts</a></li>
                 </ul>
             </nav>
 
@@ -29,6 +29,7 @@
 
     <main>
         <div class="text">
+            
             <a id="text2">
                 <b>Showcase your<br> work with an<br> online portfolio</b>
             </a>
@@ -36,23 +37,6 @@
                 for building<br> a portfolio that stands out online.</p><input type="button" value="Get Started"
                 class="ho">
         </div>
-
-        <div class="text picture-grid">
-            <div class="picture">
-                <img src="Indian Flag.png" alt="Image 1">
-            </div>
-            <div class="picture">
-                <img src="Indian Flag.png" alt="Image 2">
-            </div>
-            <div class="picture">
-                <img src="Indian Flag.png" alt="Image 3">
-            </div>
-            <div class="picture">
-                <img src="Indian Flag.png" alt="Image 4">
-            </div>
-        </div>
-
-        <div class="clearfix"></div>
 
         <div class="op">
             <h1>The Perfect <span>Touch</span></h1>
@@ -93,6 +77,10 @@
             </section>
         </div>
     </main>
+    <footer>
+        <h2 class="center">Let's work together...</h2>
+        <p class="center"><i>Just send us message or <a href="contact_us.html">Contact Us</a></i></p>
+    </footer>
 
 
 </body>
