--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" type="text/css" href="Css/index.css">
-    <script src="Functionality.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
