--- a/html/Feedback.html
+++ b/html/Feedback.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Feedback.css">
     <title>Feedback Form</title>
+    <script>
+        function message() {
+            window.alert('Your Feedback is submitted !!')
+        }
+    </script>
 </head>
 
 <body>
@@ -92,7 +97,7 @@
             </textarea>
                 </div>
                 <div>
-                    <button type="submit">Submit</button>
+                    <button type="submit" onclick="message()">Submit</button>
                 </div>
             </form>
         </main>
