--- a/html/FeedbackFRAUD.html
+++ b/html/FeedbackFRAUD.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Feedback.css">
+    <!-- <link rel="stylesheet" href="Feedback.css"> -->
     <title>Feedback Form</title>
     <script>
         function message() {
