--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
   <!-- Navigation bar with links -->
   <div class="w3-bar w3-white w3-text-black" style="position: relative;">
     <h2 class="w3-left w3-tag w3-pale-red w3-round"><abbr title="Ankit Pankaj Poorv Yogender">APPY</abbr></h2>
-    <a href="Feedback.html" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right"
+    <a href="FEEDBACKFINAL.html" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right"
       style="margin-top:10px;">FEEDBACK
     </a>
     <a href="#Contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right"
@@ -85,7 +85,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-padding-32">
       <div class="w3-center w3-padding-32">
         <h2 class="w3-wide">Let's work together...</h2>
-        <p class="w3-opacity"><i>Just send us a message or <a href="contact_us.html" id="contact_us">Call us</a></i></p>
+        <p class="w3-opacity"><i>Just send us a message or <a href="contactfinal.html" id="contact_us">Call us</a></i></p>
         <br>
         <p class="w3-white w3-text-black w3-left-align"></p>
       </div>
