--- a/html/login.html
+++ b/html/login.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Css/login.css">
-    <title>Login Page</title>
+    <title>Document</title>
+    <link href="loginfinalcss.css" rel="stylesheet">
 </head>
+
 <body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form class="log">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+    <div class="box">
+        <span class="borderline"></span>
+        <form>
+            <h2>
+                Log in
+            </h2>
+            <div class="inputbox">
+                <input type="text" required="required">
+                <span>Username</span>
+                <i>
+
+                </i>
+                
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            <div class="inputbox">
+                <input type="password" required="required">
+                <span>Password</span>
+
             </div>
-            <button type="submit" class="btn">Login</button>
+            <div class="links">
+                <a href="#">Forgot Password</a>
+                <a href="#">Sign up</a>
+            </div>
+            <input type="submit" value="Login">
+            
         </form>
     </div>
 </body>
+
 </html>
