--- a/html/contactFRAUD.html
+++ b/html/contactFRAUD.html
@@ -50,9 +50,10 @@
                     <input type="email" id="email" name="email" required placeholder="Enter your Email">
                 </li>
             </ul>
-            <button type="button" onclick="submit()">Submit</button>
+            
         </form>
+        <button type="button" onclick="submit()">Submit</button>
     </figure>
 </body>
-<script src="contact.js"></script>
+<script src="contactFRAUD.js"></script>
 </html>
