--- a/html/index.html
+++ b/html/index.html
@@ -64,14 +64,14 @@ and is wrapped around the whole page content, except for the footer in this exam
 
         <div class="w3-row-padding" style="margin:0 -16px">
           <div class="w3-third">
-            <a href="contact.html">
+            <a href="contactFRAUD.html">
               <img src="https://cdn.discordapp.com/attachments/1147215011840794706/1147436018111369317/1092.jpg"
                 alt="Photo by Meritt Thomas" style="width:100%" class="w3-hover-opacity">
             </a>
 
           </div>
           <div class="w3-third">
-            <a href="contact.html">
+            <a href="contactFRAUD.html">
               <img src="https://cdn.discordapp.com/attachments/1147215011840794706/1147435798787018762/5192055.jpg"
                 alt="Photo by Humphrey Muleba" style="width:100%" class="w3-hover-opacity">
             </a>
