--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,9 @@
     <a href="FEEDBACKFINAL.html" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right"
       style="margin-top:10px;">FEEDBACK
     </a>
+    <a href="loginfinal.html" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right"
+      style="margin-top:10px;">LOGIN
+    </a>
     <a href="#Contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right"
       style="margin-top:10px;">CONTACT</a>
     <a href="#Activities" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-medium w3-right"
