--- a/html/output.html
+++ b/html/output.html
@@ -29,10 +29,10 @@
 						<h3><a id="pdf" href="#">Download PDF</a></h3>
 						<h3><a href="mailto:name@yourdomain.com"><span id="email"></span></a></h3>
 						<h3><span id="phone"></span></h3>
-					</div><!--// .contact-info -->
+					</div>
 				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
+			</div>
+		</div>
 
 		<div id="bd">
 			<div id="yui-main">
@@ -47,7 +47,7 @@
 								Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change. 
 							</p>
 						</div>
-					</div><!--// .yui-gf -->
+					</div>
 
 					<div class="yui-gf">
 						<div class="yui-u first">
@@ -70,7 +70,7 @@
 									<p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
 								</div>
 						</div>
-					</div><!--// .yui-gf -->
+					</div>
 
 					<div class="yui-gf">
 						<div class="yui-u first">
@@ -95,34 +95,34 @@
 								<li class="last">Linux</li>
 							</ul>
 						</div>
-					</div><!--// .yui-gf-->
+					</div>
 
 					<div class="yui-gf">
 	
 						<div class="yui-u first">
 							<h2>Experience</h2>
-						</div><!--// .yui-u -->
+						</div>
 
 						<div class="yui-u">
 
 							<div class="job">
 								<h2>Facebook</h2>
 								<h3>Senior Interface Designer</h3>
-								<h4>2005-2007</h4>
+								<h4>2022-Present</h4>
 								<p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
 							</div>
 
 							<div class="job">
 								<h2>Apple Inc.</h2>
 								<h3>Senior Interface Designer</h3>
-								<h4>2005-2007</h4>
+								<h4>2019-2022</h4>
 								<p>Progressively reconceptualize multifunctional "outside the box" thinking through inexpensive methods of empowerment. Compellingly morph extensive niche markets with mission-critical ideas. Phosfluorescently deliver bricks-and-clicks strategic theme areas rather than scalable benefits. </p>
 							</div>
 
 							<div class="job">
 								<h2>Microsoft</h2>
 								<h3>Principal and Creative Lead</h3>
-								<h4>2004-2005</h4>
+								<h4>2018-2019</h4>
 								<p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
 							</div>
 
@@ -130,12 +130,12 @@
 							<div class="job last">
 								<h2>International Business Machines (IBM)</h2>
 								<h3>Lead Web Designer</h3>
-								<h4>2001-2004</h4>
+								<h4>2015-2018</h4>
 								<p>Globally re-engineer cross-media schemas through viral methods of empowerment. Proactively grow long-term high-impact human capital and highly efficient innovation. Intrinsicly iterate excellent e-tailers with timely e-markets.</p>
 							</div>
 
-						</div><!--// .yui-u -->
-					</div><!--// .yui-gf -->
+						</div>
+					</div>
 
 
 					<div class="yui-gf last">
@@ -146,21 +146,21 @@
 							<h2>Indiana University - Bloomington, Indiana</h2>
 							<h3>Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3>
 						</div>
-					</div><!--// .yui-gf -->
+					</div>
 
 
-				</div><!--// .yui-b -->
-			</div><!--// yui-main -->
-		</div><!--// bd -->
+				</div>
+			</div>
+		</div>
 
 		<div id="ft">
-			<p>Jonathan Doe &mdash;  &mdash;<span id="address"></span></p>
-		</div><!--// footer -->
+			<p><span id="address"></span></p>
+		</div>
 
-	</div><!-- // inner -->
+	</div>
 
 
-</div><!--// doc -->
+</div>
 
 <script>
     var name = localStorage.getItem("name");
