--- a/html/home.html
+++ b/html/home.html
@@ -20,7 +20,17 @@
     </style>
 </head>
 <body>
+    <header class="header">
+        <a href="#" class="logo">Portfolio Maker</a>
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+            <a href="#">Feedback</a>
 
+        </nav>
+    </header>
 <div id="slider">
     <img src="https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Slide 1">
     
