update in login

--- a/html/contact.html
+++ b/html/contact.html
@@ -51,9 +51,9 @@
                 </li>
             </ul>
             
-            <button type="button" onclick="submit()" style="margin-top:20px">Submit</button>
         </form>
+        <button type="button" onclick="submit()" style="margin-top:20px">Submit</button>
     </figure>
 </body>
-<script src="contact.js"></script>
+<script src="contactFRAUD.js"></script>
 </html>
