--- a/html/home.html
+++ b/html/home.html
@@ -25,9 +25,10 @@
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
-            <a href="#">Feedback</a>
+            <a href="contact.html">Portfolio</a>
+            <a href="contactfinal.html">Contact</a>
+            <a href="FEEDBACKFINAL.html">Feedback</a>
+            <a href="loginfinal.html">LOGIN</a>
 
         </nav>
     </header>
