--- a/html/home.html
+++ b/html/home.html
@@ -27,7 +27,7 @@
         <a href="#" class="logo">Portfolio Maker</a>
         <nav class="navbar">
             <a href="home.html" class="active">Home</a>
-            <a href="contact.html">Portfolio</a>
+            <a href="template.html">Portfolio</a>
             <a href="contactfinal.html">Contact</a>
             <a href="FEEDBACKFINAL.html">Feedback</a>
             <a href="loginfinal.html">Login</a>
