--- a/html/home.html
+++ b/html/home.html
@@ -57,7 +57,7 @@
                 style="background-image: url(https://d.novoresume.com/images/doc/minimalist-resume-template.png);">
                 <div class="content">
                     <div class="name">SOPHIA SMITH</div>
-                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                    <div class="des">I am a bank Teller.</div>
                     <button class="seeMoreButton">See More</button>
 
                 </div>
