--- a/html/contactfinal.html
+++ b/html/contactfinal.html
@@ -34,7 +34,7 @@
 <script>
     document.getElementById('my_button').onclick = function() {
         // Redirect to the desired link
-        window.location.href = 'index.html';
+        window.location.href = 'home.html';
     };
 </script>
 </body>
