--- a/html/loginfinal.html
+++ b/html/loginfinal.html
@@ -23,7 +23,7 @@
             </div>
             <div class="links">
                 <a href="#">Forgot Password</a>
-                <a href="#">Sign up</a>
+                <a href="signup.html">Sign up</a>
             </div>
             <input type="submit" value="Login">
         </form>
