--- a/html/FEEDBACKFINAL.html
+++ b/html/FEEDBACKFINAL.html
@@ -39,7 +39,7 @@
         };
         document.getElementById('my_button').onclick = function() {
         // Redirect to the desired link
-        window.location.href = 'index.html';
+        window.location.href = 'home.html';
     };
 
 
