--- a/html/loginfinal.html
+++ b/html/loginfinal.html
@@ -11,7 +11,7 @@
 <body>
     <div class="box">
         <span class="borderline"></span>
-        <form action="#" method="post" onsubmit="return login()">
+        <form action="#" method="#" onsubmit="return login()">
             <h2>Log in</h2>
             <div class="inputbox">
                 <input type="text" required="required">
