home button in login page

--- a/html/loginfinal.html
+++ b/html/loginfinal.html
@@ -26,6 +26,7 @@
                 <a href="signup.html">Sign up</a>
             </div>
             <input type="submit" value="Login">
+            <button onclick="change()">Home</button>
         </form>
     </div>
     <!-- <button type="button" onclick="login()">Login</button> -->
@@ -33,6 +34,10 @@
         function login() {
             window.alert('Login Successful!!!');
             // Additional logic can be added here if needed
+        }
+        function change()
+        {
+            window.location.href = 'home.html'
         }
     </script>
 </script>
